--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "nodemon ./index.js "
+    "server": "nodemon ./index.js "
   },
   "repository": {
     "type": "git",
